--- a/xray-classification/requirements.txt
+++ b/xray-classification/requirements.txt
@@ -1,8 +1,9 @@
 flask==1.1.1
 msgpack==0.6.2
-numpy==1.17.4
+numpy==1.18.0
 opencv-python==4.1.2.30
-pillow==6.2.1
+pillow==7.0.0
+pydicom==1.3.0
 tensorflow==2.0.0
-tf-explain==0.1.0
-waitress==1.3.1
+tf-explain==0.2.0
+waitress==1.4.2
