--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
   "python.linting.flake8Enabled": true,
   "python.linting.pylintEnabled": false,
 
+  // Testing
+  "python.testing.pytestEnabled": true,
+
   // Use Python virtualenv
   "python.pythonPath": ".venv/bin/python",
 
