Use separate folder for model deployment [ch1100]

--- a/docker/py37/Dockerfile
+++ b/docker/py37/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.7.6
 
 WORKDIR /src
+ARG MDAI_PATH
 
 COPY requirements.txt /src/requirements.txt
 RUN pip install -r requirements.txt
@@ -11,6 +12,8 @@ RUN pip install -r lib/requirements.txt
 COPY server.py /src/
 COPY validation.py /src/
 COPY lib /src/lib/
+RUN pip install -r lib/${MDAI_PATH}/requirements.txt
+ENV MDAI_PATH=${MDAI_PATH}
 
 RUN useradd docker
 USER docker
