--- a/docker/py37/Dockerfile.template
+++ b/docker/py37/Dockerfile.template
@@ -6,18 +6,21 @@ ARG MDAI_PATH
 COPY requirements.txt /src/requirements.txt
 RUN pip install -r requirements.txt
 
-COPY lib/requirements.txt /src/lib/requirements.txt
-RUN pip install -r lib/requirements.txt
+COPY lib/requirements.txt /src/model-requirements.txt
+RUN pip install -r model-requirements.txt
+
+COPY lib/${MDAI_PATH}/requirements.txt /src/mdai-requirements.txt
+RUN pip install -r mdai-requirements.txt
 
 COPY server.py /src/
 COPY validation.py /src/
-COPY lib /src/lib/
-RUN pip install -r lib/${MDAI_PATH}/requirements.txt
 ENV MDAI_PATH=${MDAI_PATH}
+
+--COPY--
 
 RUN useradd docker
 USER docker
 
 EXPOSE 6324
 
-CMD ["python", "server.py"]
+--COMMAND--
