--- a/docker/py37/Dockerfile.template
+++ b/docker/py37/Dockerfile.template
@@ -3,6 +3,8 @@ FROM python:3.7.6
 WORKDIR /src
 ARG MDAI_PATH
 
+--ENV--
+
 COPY requirements.txt /src/requirements.txt
 RUN pip install -r requirements.txt
 
