--- a/docker/py37/Dockerfile.template
+++ b/docker/py37/Dockerfile.template
@@ -3,7 +3,7 @@ FROM python:3.7.6
 WORKDIR /src
 ARG MDAI_PATH
 
---ENV--
+{{ENV}}
 
 COPY requirements.txt /src/requirements.txt
 RUN pip install -r requirements.txt
@@ -18,11 +18,11 @@ COPY server.py /src/
 COPY validation.py /src/
 ENV MDAI_PATH=${MDAI_PATH}
 
---COPY--
+{{COPY}}
 
 RUN useradd docker
 USER docker
 
 EXPOSE 6324
 
---COMMAND--
+{{COMMAND}}
