--- a/docker/py37/Dockerfile.template
+++ b/docker/py37/Dockerfile.template
@@ -1,15 +1,16 @@
-FROM python:3.7.6
+{{PARENT_IMAGE}}
 
 WORKDIR /src
 ARG MDAI_PATH
 
 {{ENV}}
 
+RUN conda create -n mdai-env python=3.7 pip
 COPY requirements.txt /src/requirements.txt
-RUN pip install -r requirements.txt
-
 COPY lib/${MDAI_PATH}/requirements.txt /src/mdai-requirements.txt
-RUN pip install -r mdai-requirements.txt
+RUN /bin/bash -c "source activate mdai-env && \
+    pip install -r requirements.txt && \
+    pip install -r mdai-requirements.txt"
 
 COPY server.py /src/
 COPY validation.py /src/
