--- a/mdai/config.yaml
+++ b/mdai/config.yaml
@@ -1,3 +1,3 @@
-base_image: <string> # path to Dockerfile of base image
+base_image: <string> # base docker image. Currently only py37 is supported
+device_type: <string> # Can be one of two values (cpu/gpu) to indicate build type. Default is cpu
 env: <string: value> # some key-val pairs which can be passed to the server at runtime
-
