--- a/mdai/requirements.txt
+++ b/mdai/requirements.txt
@@ -1,6 +1,8 @@
 fastapi==0.52.0
 msgpack==1.0.0
 hypercorn==0.9.2
-pylibjpeg
-pylibjpeg-libjpeg
-pylibjpeg-openjpeg
+numpy==1.19.1
+pydicom==2.0.0
+pylibjpeg==1.1.1
+pylibjpeg-libjpeg==1.1.0
+pylibjpeg-openjpeg==1.0.1
