--- a/mdai/requirements.txt
+++ b/mdai/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.61.1
-msgpack==1.0.0
-hypercorn==0.10.2
-numpy==1.19.2
-pydicom==2.0.0
-pylibjpeg==1.1.1
-pylibjpeg-libjpeg==1.1.0
-pylibjpeg-openjpeg==1.0.1
+fastapi==0.65.1
+msgpack==1.0.2
+hypercorn==0.11.2
+numpy==1.20.3
+pydicom==2.1.2
+pylibjpeg==1.3.0
+pylibjpeg-libjpeg==1.2.0
+pylibjpeg-openjpeg==1.1.1
+pylibjpeg-rle==1.1.0
