--- a/examples/lung-segmentation/model/.mdai/requirements.txt
+++ b/examples/lung-segmentation/model/.mdai/requirements.txt
@@ -1,4 +1,4 @@
 keras-unet==0.1.2
-opencv-python==4.4.0.42
-scikit-image==0.17.2
+opencv-python-headless==4.4.0.42
 tensorflow==2.2.0
+matplotlib==3.4.2
