--- a/mdai/requirements.txt
+++ b/mdai/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.65.1
 msgpack==1.0.2
-hypercorn==0.11.2
-numpy==1.20.3
+uvicorn==0.14.0
+numpy
 pydicom==2.1.2
 pylibjpeg==1.3.0
 pylibjpeg-libjpeg==1.2.0
