--- a/docker/nvidia/Dockerfile
+++ b/docker/nvidia/Dockerfile
@@ -6,7 +6,7 @@ ARG MDAI_PATH
 {{ENV}}
 
 COPY lib/workspace /workspace
-COPY requirements.txt /src/requirements.txt
+COPY requirements.txt lib/${MDAI_PATH}/*.whl /src/
 COPY lib/${MDAI_PATH}/requirements.txt /src/mdai-requirements.txt
 RUN /bin/bash -c "pip install -r requirements.txt && \
     pip install -r mdai-requirements.txt"
