--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -7,7 +7,7 @@ ARG MDAI_PATH
 
 {{CONDA_ENV}}
 
-COPY requirements.txt /src/requirements.txt
+COPY requirements.txt lib/${MDAI_PATH}/*.whl /src/
 COPY lib/${MDAI_PATH}/requirements.txt /src/mdai-requirements.txt
 RUN /bin/bash -c "source activate mdai-env && \
     pip install -r requirements.txt && \
